Docs: sendRegisterEmail swagger api document.
